# GameQuark

./: .gitignore  CMakeLists.txt  README.md
core/: engine.cpp  engine.hpp
tests/: test1.cpp
